# gridsight

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-dmz.yml
docs/: CI_CD_DMZ.md  DEPLOY_EDGE_VM.md  IMPLEMENTATION_PLAN.md
scripts/: deploy_dmz.sh
src/gridsight/: __init__.py  api.py  cli.py  config.py  schemas.py  service.py  vector_store.py
src/gridsight/db/: __init__.py  schema.py  sync.py
src/gridsight/pipeline/: __init__.py  ingest.py  play_vectors.py  projections.py
src/gridsight/web/: index.html
src/gridsight/web/static/: app.js  styles.css
tests/: test_db_sync.py  test_play_vectors.py  test_projections.py  test_service_plays.py
