[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridsight"
version = "0.1.0"
description = "NFL vector analytics and projection platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "GridSight"}
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pandas>=2.3.0",
  "numpy>=2.2.0",
  "scikit-learn>=1.7.0",
  "pyarrow>=21.0.0",
  "joblib>=1.5.0",
  "qdrant-client>=1.15.0",
  "nfl-data-py>=0.3.0",
  "sqlalchemy>=2.0.41",
  "psycopg[binary]>=3.2.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[project.scripts]
gridsight = "gridsight.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
